--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,323 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+/* article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+	display: block;
+} */
+body {
+	line-height: 1;
+}
+ol,
+ul {
+	list-style: none;
+}
+blockquote,
+q {
+	quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: "";
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+} /* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+}
+html,
+body {
+	height: 100%;
+	font-family: "Titillium Web", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: "Bangers", cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
+}
+.container {
+	width: 880px;
+	/* TB LR */
+	margin: 0 auto;
+} /* header */
+header nav {
+	/* display: inline-block;*/
+	width: 691px;
+	vertical-align: top;
+	margin-top: 35px;
+}
+header nav a {
+	margin-right: 65px;
+	font-size: 14px;
+	color: gray;
+	text-decoration: none;
+}
+header nav a:hover {
+	text-decoration: underline;
+}
+header nav a:first-child {
+	margin-left: 0;
+}
+header nav a:last-child {
+	margin-right: 0;
+}
+header .logo {
+	margin-top: 25px;
+} /* cta */
+.cta .cta-text {
+	/* display: inline-block; */
+	height: 300px;
+	width: 40%;
+	font-size: 45px;
+	/*margin-top: 120px; */
+	text-align: center;
+	padding: 0px 75px;
+	margin-top: 29px;
+	margin-right: 35px;
+}
+.cta .cta-text button {
+	background: white;
+	vertical-align: top;
+	margin-top: 6px;
+	padding: 8px 44px;
+	font-size: 17px;
+	border: 1px solid black;
+	cursor: pointer;
+}
+.cta .cta-text button:hover {
+	background: black;
+	color: white;
+}
+.cta img {
+	/*display: inline-block;*/
+	/*margin: 69px;*/
+	width: 300px;
+	height: 300px;
+}
+.cta-img {
+	margin-top: 35px;
+}
+.cta {
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: row;
+}
 
+.main-content {
+	border-top: 1px solid black;
+	margin-top: 76px;
+	padding-top: 39px;
+}
+.main-content .top-content {
+	padding: 0 10px;
+}
+.main-content .top-content .text-content {
+	width: 410px;
+	/*display: inline-block;*/
+	margin-right: 34px;
+}
+.main-content .top-content .text-content:last-child {
+	margin-right: 0;
+}
+.main-content .middle-img {
+	margin-top: 45px;
+}
+.main-content .bottom-content {
+	margin-top: 37px;
+	padding: 0 10px;
+}
+.main-content .bottom-content .text-content {
+	width: 275px;
+	/*display: inline-block;*/
+	margin-right: 12px;
+}
+.main-content .bottom-content .text-content:last-child {
+	margin-right: 0;
+}
+.contact {
+	margin-top: 57px;
+	border-top: 1px solid black;
+	padding: 39px 10px 0;
+}
+.contact p {
+	margin: 20px 0;
+}
+footer {
+	margin: 32px 0;
+	text-align: center;
+	font-size: 14px;
+}
+header {
+	display: flex;
+}
 
+.top-content {
+	display: flex;
+}
+
+.bottom-content {
+	display: flex;
+	flex-direction: row;
+}
+.services-header-img {
+	margin: 25px 0;
+}
+h2 {
+	font-size: 24px;
+}
+h3 {
+	font-size: 16px;
+}
+
+.serviceBoxes {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+}
+
+.serviceBoxes .serviceBox {
+	background: #eee;
+	padding: 20px 20px;
+	/* margin: 20px; */
+	border: 1px solid black;
+	width: 48%;
+	margin-bottom: 5%;
+}
+
+.serviceBoxes button {
+	font-family: "Titillium Web", sans-serif;
+	font-size: 12px;
+	background: white;
+	margin-top: 15px;
+	padding: 8px 40px;
+	border: 1px solid black;
+	border-radius: 8px;
+}
+
+.serviceBoxes button:hover {
+	background: lightgrey;
+	font-weight: bold;
+	cursor: pointer;
+}
+.about {
+	display: flex;
+}
+
+hr {
+	margin-top: 20px;
+}
+/********************** MEDIA QUERIES*****************************/
+@media only screen and (max-width: 800px) {
+    body{
+    }
+}
+@media only screen and (max-width: 500px) {
+    body {
+    }
+}
+  
